--- a/flask-video-streaming-master/templates/index.html
+++ b/flask-video-streaming-master/templates/index.html
@@ -3,7 +3,8 @@
     <title>Video Streaming Demonstration</title>
   </head>
   <body>
-    <h1>Video Streaming Demonstration</h1>
+    <h1>模拟请求</h1>
     <img src="{{ url_for('video_feed') }}">
+    <img src="{{ url_for('request') }}">
   </body>
 </html>
